plugins {
    id 'java'
    id 'application'
}

group = 'com.overlord'
version = '0.1.0'

java {
    sourceCompatibility = JavaVersion.VERSION_17
    targetCompatibility = JavaVersion.VERSION_17
}

application {
    mainClass = 'com.overlord.Main'
    applicationDefaultJvmArgs = ['-XstartOnFirstThread', '--enable-native-access=ALL-UNNAMED']
}

repositories {
    mavenCentral()
}

dependencies {
    def lwjglVersion = '3.3.3'
    def jomlVersion = '1.10.5'
    def lwjglNatives = 'natives-macos-arm64'

    implementation platform("org.lwjgl:lwjgl-bom:$lwjglVersion")

    implementation "org.lwjgl:lwjgl"
    implementation "org.lwjgl:lwjgl-glfw"
    implementation "org.lwjgl:lwjgl-opengl"
    implementation "org.lwjgl:lwjgl-stb"
    runtimeOnly "org.lwjgl:lwjgl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-glfw::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-opengl::$lwjglNatives"
    runtimeOnly "org.lwjgl:lwjgl-stb::$lwjglNatives"

    implementation "org.joml:joml:$jomlVersion"
}

tasks.withType(JavaCompile) {
    options.encoding = 'UTF-8'
}